try to fix horizontal scroller

--- a/portfolio/src/assets/styles/main.css
+++ b/portfolio/src/assets/styles/main.css
@@ -354,4 +354,17 @@ section.fullbleed {
     .hide-on-mobile {
         display: none !important;
     }
+
+    .wide-gallery > * {
+        flex-shrink: 0;
+        margin-right: 25px;
+        margin-bottom: 25px;
+        box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+    }
+    
+    .wide-gallery > * > img {
+        height: 300px;
+        width: auto !important;
+        vertical-align: bottom;
+    }
 }
